// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`behavior freeze corpus addClass removeClass 1`] = `
{
  "className": "b c",
}
`;

exports[`behavior freeze corpus append content 1`] = `
{
  "html": "<i>x</i>",
}
`;

exports[`behavior freeze corpus class selector 1`] = `
{
  "length": 2,
  "texts": [
    "1",
    "2",
  ],
}
`;

exports[`behavior freeze corpus empty selection 1`] = `
{
  "html": null,
  "length": 0,
}
`;

exports[`behavior freeze corpus html fragment single tag 1`] = `
{
  "className": "box",
  "length": 1,
  "tag": "DIV",
}
`;

exports[`behavior freeze corpus html fragment with children 1`] = `
{
  "html": "<li>a</li><li>b</li>",
  "length": 1,
  "liCount": 2,
  "tag": "UL",
}
`;

exports[`behavior freeze corpus html getter setter 1`] = `
{
  "after": "<span>new</span>",
  "before": "old",
  "childTag": "SPAN",
}
`;

exports[`behavior freeze corpus id selector 1`] = `
{
  "html": "hello",
  "length": 1,
  "tag": "DIV",
}
`;
